--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@
 
 body {
     font-family: "Plus Jakarta Sans", sans-serif;
-    margin-top: 80px;
+    margin-top: 86px;
+}
+.w-1440 {
+    /*width: 1440px;*/
+    /*margin: 0 auto;*/
 }
 .w-1250 {
     width: 1250px;
@@ -18,6 +22,7 @@ header {
     background: #EFF0F3;
     position: fixed;
     top: 0;
+    left: 0;
     box-shadow: 4px 6px 13px 0 rgba(215, 215, 215, 0.25);
 }
 .header {
@@ -42,6 +47,7 @@ header {
 }
 
 header nav {
+    /*width: 756px;*/
     display: flex;
     gap: 50px;
 }
@@ -63,11 +69,12 @@ header nav ul li:last-child svg {
     margin-right: 10px;
 }
 header nav button {
+    width: 213px;
+    height: 44px;
     display: flex;
-    align-content: center;
-    padding: 10px 17px;
-    align-items: flex-start;
+    align-items: center;
     gap: 10px;
+    padding: 10px 17px;
     color: #FFFFFE;
     font-size: 18px;
     font-weight: 700;
@@ -80,19 +87,106 @@ header nav button span {
 }
 
 /* ------------------------------------ SECTION HERO ------------------------------------ */
-section {
+section:nth-child(2) {
     width: 100vw;
     height: 900px;
     background: #EFF0F3;
 }
-/*.hero {*/
-/*    background: #EFF0F3;*/
-/*}*/
-/*.hero .hero-info {*/
-/*    !*margin-top: 271px;*!*/
-/*}*/
+.hero {
+    display: flex;
+    gap: 116px;
+    /*align-items: center;*/
+}
+.hero-info {
+    margin-top: 185px;
+    width: 664px;
+    height: 345px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.hero-info h1 {
+    width: 617px;
+    height: 162px;
+    color: #2B2C34;
+    font-size: 64px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.hero-info div:nth-child(2) {
+    height: 56px;
+    border-left: solid 3px #2B2C34;
+    padding-left: 12px;
+}
+.hero-info div:nth-child(2) p {
+    width: 652px;
+    height: 50px;
+    color: #9A9494;
+    font-size: 20px;
+    font-weight: 400;
+}
 
+.subscribe-input {
+    display: flex;
+    gap: 20px;
+    height: 67px;
+}
+.subscribe-input input {
+    width: 444px;
+    padding: 21px 200px 21px 25px;
+    border-radius: 8px;
+    border: none;
+    background: #FFFFFE;
+    color: #C0C0C0;
+    font-size: 20px;
+    font-weight: 400;
+}
+.subscribe-input button {
+    width: 145px;
+    padding: 20px 23px 19px 23px;
+    border-radius: 8px;
+    background: #6246EA;
+    color: #FFFFFE;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
 
+.hero img {
+    margin: 177px 18px 0 18px;
+    width: 434px;
+    height: 363px;
+}
 
-
+/* ------------------------------------ SECTION CATEGORIES ------------------------------------ */
+section:nth-child(3) {
+    width: 100vw;
+    height: 500px;
+    background: #EFF0F3;
+}
+.categories {
+    color: #2B2C34;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.categories div:first-child {
+    display: flex;
+    justify-content: space-between;
+}
+.categories div:first-child div {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+}
+.categories div:first-child svg {
+    width: 6px;
+    /*height: 14px;*/
+}
+.categories div:first-child h4 {
+    font-size: 24px;
+}
+.categories div:first-child h5 {
+    text-align: right;
+    font-size: 20px;
+}
 
